--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,19 +1,15 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: BIenvenido a Docu
+description: Centro de paginas que funcionan como herramientas para desarrolladores.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: La informacón en un solo lugar!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/docu.png
   actions:
-    - text: Example Guide
+    - text: Centro de paginas
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
